--- a/dev/styles.scss
+++ b/dev/styles.scss
@@ -1,4 +1,8 @@
+@import 'scripts/components/navbar/navbar.scss';
 @import 'scripts/components/landing/landing.scss';
+@import 'scripts/components/about/about.scss';
+@import 'scripts/components/sponsor/sponsor.scss';
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -6,14 +10,52 @@
 }
 
 html {
-    font-size: 14px;
+    font-size: 16px;
     font-family: 'Open Sans', sans-serif;
 }
 
 .wrapper {
-    max-width: 70vw;
+    max-width: 85vw;
     margin: 0 auto;
     display: block;
     padding-left: 2em;
     padding-right: 2em;
+}
+
+.logo {
+    width: 100px;
+    height: 100px;
+}
+
+ul {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+    color: #1e1e1e;
+}
+
+section {
+    padding: 4em 0;
+}
+
+h1 {
+    font-size: 3em;
+    font-weight: 300;
+    margin-bottom: 0.8em;
+}
+
+h2 {
+    font-size: 2em;
+    padding-bottom: 1em;
+}
+
+button {
+    transition: 0.3s;
+}
+
+button:hover {
+    transform: scale(1.05);
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
