--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,15 +1,144 @@
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding: 0.5em 0;
+  box-shadow: 0px 10px 5px 0px rgba(30, 30, 30, 0.25);
+  position: fixed;
+  z-index: 10;
+  width: 100vw;
+  background: #fff; }
+
+.logo {
+  margin: 0; }
+
+.navLinks {
+  display: flex;
+  justify-content: space-around; }
+  .navLinks a {
+    padding: 0 1em; }
+  .navLinks li {
+    color: #1e1e1e; }
+
+.donate {
+  border-radius: 50px;
+  background: #fc9208;
+  color: #fff;
+  padding: 0.3em 1em;
+  font-size: 1.5em; }
+
+.logo-slide {
+  height: 80vh;
+  position: relative; }
+
+.slideOne {
+  background: url("/assets/images/logo.png");
+  background-repeat: no-repeat;
+  background-position: center; }
+
+.slideTwo {
+  background: url("/assets/images/communityOne.jpg");
+  background-repeat: no-repeat;
+  background-size: cover; }
+
+.slideThree {
+  background: url("/assets/images/communityTwo.jpg");
+  background-repeat: no-repeat;
+  background-size: cover; }
+
+.slideFour {
+  background: url("/assets/images/Haiti.jpg");
+  background-repeat: no-repeat;
+  background-size: cover; }
+
+.slideFive {
+  background: url("/assets/images/rencontre.jpg");
+  background-repeat: no-repeat;
+  background-size: cover; }
+
+h3 {
+  text-align: center;
+  font-size: 1.5em;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  background: linear-gradient(transparent, black);
+  color: #fff;
+  width: 99vw;
+  padding-top: 10vh;
+  padding-bottom: 5vh;
+  font-size: 2em;
+  font-weight: 300; }
+
+.carousel {
+  padding-top: 8em; }
+
+.about {
+  text-align: center; }
+
+.textContainer {
+  display: flex;
+  justify-content: space-around; }
+
+.textBox {
+  text-align: center;
+  width: 30%;
+  border: 2px solid #fc9208;
+  padding: 2em;
+  border-radius: 20px; }
+  .textBox ul {
+    list-style: initial;
+    text-align: left; }
+
+p {
+  line-height: 2.5; }
+
+.sponsor {
+  text-align: center; }
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0; }
 
 html {
-  font-size: 14px;
+  font-size: 16px;
   font-family: 'Open Sans', sans-serif; }
 
 .wrapper {
-  max-width: 70vw;
+  max-width: 85vw;
   margin: 0 auto;
   display: block;
   padding-left: 2em;
   padding-right: 2em; }
+
+.logo {
+  width: 100px;
+  height: 100px; }
+
+ul {
+  list-style: none; }
+
+a {
+  text-decoration: none;
+  color: #1e1e1e; }
+
+section {
+  padding: 4em 0; }
+
+h1 {
+  font-size: 3em;
+  font-weight: 300;
+  margin-bottom: 0.8em; }
+
+h2 {
+  font-size: 2em;
+  padding-bottom: 1em; }
+
+button {
+  transition: 0.3s; }
+
+button:hover {
+  transform: scale(1.05);
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22); }
