--- a/dev/scripts/components/navbar/navbar.scss
+++ b/dev/scripts/components/navbar/navbar.scss
@@ -25,9 +25,9 @@
     }
 }
 
-.donate {
+button {
     border-radius: 50px;
-    background: rgb(252, 146, 8);
+    background: rgb(255, 169, 56);
     color: #fff;
     padding: 0.3em 1em;
     font-size: 1.5em;
