iteration before final changes

--- a/dev/scripts/components/about/about.scss
+++ b/dev/scripts/components/about/about.scss
@@ -7,7 +7,7 @@ p {
 }
 
 .bioBox {
-    width: 45%;
+    width: 30%;
         p {
             text-align: left;
             line-height: 2;
@@ -54,6 +54,11 @@ p {
     background-size: contain;
 }
 
+.bioImgSeven {
+    background: url('/assets/images/bioImages/fLindor.png') no-repeat center;
+    background-size: contain;
+}
+
 .hidden {
     display: none;
 }
@@ -66,4 +71,9 @@ p {
     padding: 0.3em 0.5em;
     font-size: 1.2em;
     margin: 0.5em 0;
+}
+
+.bioBox {
+    margin: 0 auto;
+    display: block;
 }
