--- a/dev/scripts/components/navbar/navbar.scss
+++ b/dev/scripts/components/navbar/navbar.scss
@@ -1,12 +1,24 @@
 .navbar {
     display: flex;
+    position: fixed !important;
+    align-items: center;
+    justify-content: space-around;
+    padding: 0.5em 0;
+    box-shadow: 0px 10px 5px 0px rgba(30,30,30,0.25);
+    z-index: 10;
+    width: 99.9%;
+    background: #fff;
+}
+
+.navbarHidden {
+    display: flex;
     align-items: center;
     justify-content: space-around;
     padding: 0.5em 0;
     box-shadow: 0px 10px 5px 0px rgba(30,30,30,0.25);
     position: fixed;
     z-index: 10;
-    width: 100vw;
+    width: 99.9%;
     background: #fff;
 }
 
@@ -30,5 +42,21 @@ button {
     background: rgb(255, 169, 56);
     color: #fff;
     padding: 0.3em 1em;
+    font-size: 1.5em;
+}
+
+.hamburgerIcon {
+    background: url('/assets/icons/hamburgerIcon.svg') no-repeat #fff;
+    padding: 20px;
+    float: right;
+    display: none;
+    z-index: 10;
+}
+
+.xHamIcon {
+    position: absolute;
+    top: 5%;
+    right: 5%;
+    display: none;
     font-size: 1.5em;
 }
