--- a/dev/styles.scss
+++ b/dev/styles.scss
@@ -4,6 +4,8 @@
 @import 'scripts/components/sponsor/sponsor.scss';
 @import 'scripts/components/contact/contact.scss';
 @import 'scripts/components/eventsPrograms/eventsPrograms.scss';
+@import 'scripts/components/media/media.scss';
+@import 'scripts/viewports.scss';
 
 * {
     box-sizing: border-box;
@@ -17,11 +19,12 @@ html {
 }
 
 .wrapper {
-    max-width: 85vw;
+    max-width: 90vw;
     margin: 0 auto;
     display: block;
     padding-left: 2em;
     padding-right: 2em;
+    position: relative;
 }
 
 .logo {
@@ -54,8 +57,9 @@ h1 {
 
 h2 {
     font-size: 2em;
-    padding-bottom: 1em;
-    margin-top: 1em;
+    margin: 1em 0;
+    border-bottom: 2px solid #ffc266;
+    display: inline-block;
 }
 
 button {
