--- a/dev/scripts/components/media/media.scss
+++ b/dev/scripts/components/media/media.scss
@@ -1,7 +1,7 @@
 .media {
     text-align: center;
         img {
-            width: 50%;
+            max-width: 50%;
             height: 22em;
             padding: 1em;
         }
