--- a/dev/styles.scss
+++ b/dev/styles.scss
@@ -97,3 +97,7 @@ button:hover {
     justify-content: space-around;
     flex-wrap: wrap;
 }
+
+.spaceAround {
+    justify-content: space-around
+}
