--- a/dev/scripts/components/eventsPrograms/eventsPrograms.scss
+++ b/dev/scripts/components/eventsPrograms/eventsPrograms.scss
@@ -30,4 +30,14 @@
             padding: 1em 0;
         }
     }
+    .soccerPlayerNames {
+        width: 50vw;
+        display: flex;
+        justify-content: space-around;
+        border-bottom: 1px solid gray;
+        padding-bottom: 1em;
+            label {
+               width: 30%; 
+            }
+    }
 }
