--- a/dev/scripts/components/landing/landing.scss
+++ b/dev/scripts/components/landing/landing.scss
@@ -55,3 +55,10 @@ h3 {
 .carousel {
     padding-top: 8em;
 }
+
+#home p {
+  padding: 0 5em;
+  text-align: center;
+  color: #fff;
+  background: rgb(255, 169, 56);  
+}
