imported all photos for gallery

--- a/dev/styles.scss
+++ b/dev/styles.scss
@@ -5,6 +5,7 @@
 @import 'scripts/components/contact/contact.scss';
 @import 'scripts/components/eventsPrograms/eventsPrograms.scss';
 @import 'scripts/components/media/media.scss';
+@import 'scripts/components/gallery/gallery.scss';
 @import 'scripts/viewports.scss';
 
 * {
